force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/Base_Product_Num_of_Data_Credits__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Base Product Num of Dynamic Addon</label>
</CustomObject>