force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/fields/Addon__c.field-meta.xml
<CustomField>
    <fullName>Addon__c</fullName>
    <label>Addon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>