force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/fields/ContractGroup__c.field-meta.xml
<CustomField>
    <fullName>ContractGroup__c</fullName>
    <label>ContractGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>