force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/fields/is_override__c.field-meta.xml
<CustomField>
    <fullName>is_override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is override</label>
    <type>Checkbox</type>
</CustomField>