force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/fields/Number_of_Data_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Data_Credits__c</fullName>
    <label>Number of Data Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>