force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/fields/Wording__c.field-meta.xml
<CustomField>
    <fullName>Wording__c</fullName>
    <label>Wording</label>
    <length>255</length>
    <type>Text</type>
</CustomField>