force-app/main/default/objects/Base_Product_Num_of_Data_Credits__c/listViews/AllDC.listView-meta.xml
<ListView>
    <fullName>AllDC</fullName>
    <columns>NAME</columns>
    <columns>Controlling__c</columns>
    <columns>ContractGroup__c</columns>
    <columns>IsActive__c</columns>
    <columns>is_override__c</columns>
    <columns>Quantity__c</columns>
    <columns>Wording__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>AllDC</label>
    <language>en_US</language>
</ListView>